<resources>
    <string name="app_name">smartAp</string>
    <string name="title_name">Smart Home</string>
    <string name="offline">(离线)</string>
    <string name="linking">(连接中...)</string>
    <string name="tab_recentdevice">最近设备</string>
    <string name="tab_listdevice">设备列表</string>
    <string name="tab_setting">高级设置</string>
    <string name="tab_4">列表4</string>
    <string name="adddevices">添加设备</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="username">帐户名：</string>
    <string name="password">密 \t 码：</string>
    <string name="password_confirm">密码确认：</string>

    <string name="success">成功</string>
    <string name="failure">错误</string>
    <string name="arg_less">参数不足</string>
    <string name="arg_err">参数错误</string>
    <string name="sourcedev_type_err">源设备类型错误</string>
    <string name="destdev_type_err">目标设备类型错误</string>
    <string name="accout_existent">账户已存在</string>
    <string name="accout_nonexistent">账户不存在</string>
    <string name="accout_or_pwd_err">账户或密码错误</string>
    <string name="imei_err">设备ID错误</string>
    <string name="accout_offline">账号未登陆或已离线</string>
    <string name="symmetric_key_err">对称密钥错误</string>
    <string name="verification_code_err">校验码错误</string>
    <string name="no_permission_err">没有权限</string>

    <string name="server_err">服务器内部错误</string>
    <string name="server_forbid">服务器不开放</string>
    <string name="server_vcode_timeout">验证码超时</string>
    <string name="other_err">其它错误</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="addlist_str">购物清单</string>
    <string name="buyedlist_str">收款发货</string>
    <string name="payedlist_str">发货</string>
    <string name="recordlist_str">记录统计</string>

    <string name="Toast_checkname">请填写商品名</string>
    <string name="Toast_checkcategroy">请填写分类</string>
    <string name="Toast_checkcustomerandnumber">请填写商品数量和用户名</string>
    <string name="Toast_numberwarn">数量不能超过 1000!</string>

    <string name="_0_0">0.0</string>
    <string name="add_name">物品名称</string>
    <string name="add_number">数量</string>
    <string name="add_category">分类</string>
    <string name="add_customer">联系人</string>
    <string name="add_remark">备注</string>
    <string name="add_sellingPrice">售价</string>
    <string name="add_exchangeRate">汇率</string>
    <string name="add_purchasePrice">进价</string>
    <string name="add_profit">本单利润:（售价-进价x汇率）x 数量=￥</string>
    <string name="insert_button">保存</string>
    <string name="add_editName_hint">限填单个商品（中文15字，英文30字以内）</string>
    <string name="add_editCategory_hint">可按购买地点、派单对象、时间等</string>
    <string name="add_editCustomer_hint">限填单个客户（中文15字，英文30字以内）</string>

    <string name="item_list_goodsCategory">分类</string>
    <string name="item_list_goodsname">商品</string>
    <string name="item_list_customer">买家</string>
    <string name="item_list_number">数量</string>
    <string name="item_list_remark">备注</string>
    <string name="item_list_buyed">买到</string>

    <string name="checkbox_payed">付</string>
    <string name="checkbox_sended">发</string>
    <string name="menu_setting">设置</string>

    <string name="popupwindow_delete">删除</string>
    <string name="popupwindow_buyed">已经购买</string>
</resources>
